# ktlsp

./: .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  LICENSE  PLAN.md  README.md  flake.nix
.claude-plugin/: marketplace.json
.github/workflows/: deploy-pages.yml  release.yml
crates/ktcheck/: Cargo.toml
crates/ktcheck/src/: main.rs
crates/ktcore/: Cargo.toml
crates/ktcore/src/: coords.rs  defaults.rs  diagnostics.rs  fxhash.rs  hierarchy.rs  hints.rs  index.rs  indexed_diagnostics.rs  indexer.rs  infer.rs  lib.rs  parser.rs  project_model.rs  ranges.rs  resolve.rs  semantic.rs  signature.rs  solve.rs  symbol.rs  symbols.rs  text.rs  types.rs
crates/ktlsp/: Cargo.toml
crates/ktlsp/examples/: bench.rs
crates/ktlsp/src/: actions.rs  artifacts.rs  catalog.rs  classpath.rs  commands.rs  compile.rs  complete.rs  daemon.rs  deps.rs  edit.rs  format.rs  imports.rs  jar.rs  java.rs  language.rs  lib.rs  lsp.rs  main.rs  refactor.rs  rename.rs  salsa_support.rs  semantic_query.rs  sidecar.rs  telemetry.rs  trace.rs  trust.rs  update.rs  workspace.rs
crates/ktlsp/tests/: code_actions.rs  completion.rs  diagnostics.rs  e2e.rs  edit.rs  explain_resolution.rs  formatting.rs  goto.rs  hierarchy.rs  inlay_hints.rs  java_completion.rs  java_goto.rs  java_rename.rs  library_goto.rs  multimodule_goto.rs  ranges.rs  refactor.rs  references.rs  rename.rs  semantic.rs  signature.rs  symbols.rs
dev/: analyze_flamegraph.py  bench-analyze.sh  bench-correctness.sh  bench-latency.sh  bench_initialize.py  compare_language_servers.py  emacs_project.el  gen-bench-fixture.sh  init.lua  ktlsp-harness.sh  nvim_comprehensive.lua  nvim_features.lua  nvim_goodnotes_semantic.lua  nvim_gradle_live.lua  nvim_java.lua  nvim_java_library.lua  nvim_java_project.lua  nvim_library.lua  nvim_project.lua  nvim_semantic_fixture.lua  nvim_smoke.lua  smoke.sh  smoke_features.sh  smoke_library.sh
dev/goodnotes-semantic/feature/src/commonMain/kotlin/lib/: Thing.kt
dev/goodnotes-semantic/feature/src/jvmMain/kotlin/lib/: Thing.kt
dev/goodnotes-semantic/feature/src/jvmMain/kotlin/probe/kmp/: KmpProbe.kt
dev/goodnotes-semantic/probe/accounts/: AccountsProbe.kt
dev/gradle-sample/: README.md  build.gradle.kts  settings.gradle.kts
dev/gradle-sample/gradle/: libs.versions.toml
dev/gradle-sample/src/main/kotlin/com/example/fixture/: Concurrency.kt  Greetings.kt  Main.kt  Model.kt  SerSamePkgProbe.kt  Storage.kt  TextUtils.kt  _Probe.kt
dev/gradle-sample/src/main/kotlin/com/example/probe/: CoroutinesProbe.kt  OkioProbe.kt  ProjectTypesProbe.kt  SerMinProbe.kt  SerializationProbe.kt  StdlibProbe.kt
dev/multimodule-sample/: build.gradle.kts  settings.gradle.kts
dev/multimodule-sample/app/: build.gradle.kts
dev/multimodule-sample/app/src/main/kotlin/com/example/app/: Main.kt
dev/multimodule-sample/lib/src/main/kotlin/com/example/lib/: Greeter.kt
dev/sample/: Decor.kt  Greeter.kt  Main.kt
dev/semantic-fixture/kotlin/: Stdlib.kt
dev/semantic-fixture/probe/accounts/: AccountsProbe.kt
dev/semantic-fixture/probe/cleaner/: CleanerProbe.kt
dev/semantic-fixture/probe/invitations/: InvitationsApi.kt  Routing.kt
docs/: index.html  styles.css
docs/architecture/: language-abstraction.md
docs/benchmarks/: 2026-06-08-diagnostics-backend-baseline.md  2026-06-09-kotlin-daemon-results.md
docs/ideation/: 2026-06-29-lsp-bells-and-whistles-ideation.md
docs/plans/: 2026-06-05-001-feat-gradual-type-checker-plan.md  2026-06-05-002-feat-gradle-compile-diagnostics-plan.md  2026-06-08-001-feat-diagnostics-backend-bench-harness-plan.md  2026-06-09-001-feat-kotlin-daemon-backend-plan.md  2026-06-29-001-feat-lsp-editor-surface-plan.md  2026-06-29-001-feat-scriptable-editor-harness-plan.md  2026-07-01-001-feat-kdoc-hover-plan.md  2026-07-01-002-feat-kmp-source-set-specificity-plan.md  2026-07-03-001-feat-semantic-engine-roadmap.md  2026-07-04-001-feat-semantic-engine-execution-plan.md  autocomplete-stage-a.md  autocomplete-stage-b.md  autocomplete-stage-c.md  type-inference.md
examples/: bench.rs  dump.rs  dump_java.rs
plugins/ktlsp-lsp/: .lsp.json  README.md
plugins/ktlsp-lsp/.claude-plugin/: plugin.json
scripts/: classpath-dump.init.gradle.kts
sidecar/: build.gradle.kts  deps.json  settings.gradle.kts
sidecar/src/main/kotlin/ktlsp/sidecar/: CollectingLogger.kt  Main.kt
src/: actions.rs  artifacts.rs  catalog.rs  classpath.rs  commands.rs  compile.rs  complete.rs  coords.rs  daemon.rs  deps.rs  diagnostics.rs  format.rs  hierarchy.rs  hints.rs  imports.rs  index.rs  indexed_diagnostics.rs  indexer.rs  infer.rs  jar.rs  java.rs  knowledge.rs  lib.rs  lsp.rs  main.rs  parser.rs  project_model.rs  ranges.rs  refactor.rs  rename.rs  resolve.rs  semantic.rs  semantic_query.rs  sidecar.rs  signature.rs  solve.rs  symbol.rs  symbols.rs  telemetry.rs  text.rs  (+4 more)
testdata/: Sample.java  probe.kt  probe2.kt  s6probe.kt
tests/: code_actions.rs  completion.rs  diagnostics.rs  e2e.rs  edit.rs  explain_resolution.rs  goto.rs  hierarchy.rs  inlay_hints.rs  library_goto.rs  multimodule_goto.rs  ranges.rs  refactor.rs  references.rs  rename.rs  semantic.rs  signature.rs  symbols.rs
