[package]
name = "ktlsp"
version = "0.1.0"
edition = "2021"
description = "A simple, fast Kotlin language server (goto-definition) built on tree-sitter"
license = "MIT"
repository = "https://github.com/pepegar/ktlsp"

[[bin]]
name = "ktlsp"
path = "src/main.rs"

[lib]
name = "ktlsp"
path = "src/lib.rs"

[dependencies]
# LSP transport. Pinned: 0.21+ uses impl-Trait-in-trait (NO async_trait), trait is not object-safe.
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
# Parsing. Grammar locked to tree-sitter-kotlin-ng (verified node kinds via examples/dump.rs).
tree-sitter = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-java = "0.23"
# Workspace scanning.
walkdir = "2"
# Logging to STDERR only (stdout is the JSON-RPC wire).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
# Library-source indexing: download (blocking, rustls — no OpenSSL), extract jars, parse catalogs.
ureq = { version = "3", features = ["rustls"] }
zip = { version = "2.3", default-features = false, features = ["deflate"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
# Persistent library-symbol cache: serialize indexed symbols keyed by a jar fingerprint.
bincode = "1"
sha2 = "0.10"
