[workspace]
members = ["crates/ktlsp", "crates/ktcore", "crates/ktcheck"]
default-members = ["crates/ktlsp", "crates/ktcore", "crates/ktcheck"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
tower-lsp-server = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.24"
tree-sitter-java = "0.23"
# Fork fixes automatic semicolon insertion before a bare primary constructor on the next line.
tree-sitter-kotlin-ng = { git = "https://github.com/pepegar/tree-sitter-kotlin", rev = "24061eabc8320d4d0bcaa2d528804db0412caeb3" }
ureq = { version = "3", features = ["rustls"] }
walkdir = "2"
zip = { version = "2.3", default-features = false, features = ["deflate"] }
toml = "1"
bincode = "1"
sha2 = "0.10"
salsa = "0.28"
zstd = "0.13"

[patch.crates-io]
ls-types = { path = "vendor/ls-types" }
