[package]
name = "ktcheck"
version = "0.1.0"
edition = "2021"
description = "Fast Kotlin linter/typechecker frontend built on ktcore"
license = "MIT"
repository = "https://github.com/pepegar/ktlsp"

[[bin]]
name = "ktcheck"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
ktcore = { path = "../ktcore" }
ktlsp = { path = "../ktlsp" }
serde.workspace = true
sha2.workspace = true
tree-sitter.workspace = true
walkdir.workspace = true
zstd.workspace = true

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15", default-features = false, features = ["flamegraph"] }
